--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "miraplay_test_client",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Vallyblink.github.io/miraplay_test_client/",
